<?xml version="1.0"?>
<package>
  <name>ros_planning_msgs</name>
  <version>1.12.0</version>
  <description>
    Messages for helping robots get around.
  </description>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/ros_planning_msgs</url>
  <url type="repository">https://github.com/ros-planning/ros_planning_msgs</url>
  <url type="bugtracker">https://github.com/ros-planning/ros_planning_msgs/issues</url>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>move_base_msgs</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>

